--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <!-- Inizio header -->
-    <header>
+    <header class="bg-blue header-style">
         <section>
-            
+            <img  class="header-image" src="./img/logo.svg" alt="Logo Booleaner" />
         </section>
     </header>
     <!-- Fine header -->
