feat:hero-section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,31 @@
     <main>
         <!-- Inizio hero section -->
          <section>
+            <h1>Internet deve essere al servizio 
+                del "bene pubblico": il manifesto di 
+                Tim Berners-Lee
+            </h1>
+            <p><span class="text-gray">
+                Scritto da</span>
+                <span class="text-aqua"> 
+                    The Booleaner</span>
+            </p>
+            <p class="text-small text-gray">
+                il 10/10/2020
+            </p>
 
-         </section>
+            <figure>
+                <img src="./img/tim-1.jpg" alt="Tim Berners-Lee">
+                <img src="./img/tim-2.jpg" alt="Tim Berners-Lee">
+                <figcaption>
+                    <p class="text-small">
+                        1st Photo: John S. and L. Knight Foundation, 
+                        by Scott Henrichsen</br>
+                        2nd Photo: Wikimedia, by Paul Clarke
+                    </p>
+                </figcaption>
+            </figure>
+        </section>
         <!-- Fine hero section -->
         
         <!-- Inizio seconda parte di main -->
