feat:main-finished

--- a/index.html
+++ b/index.html
@@ -48,7 +48,105 @@
         
         <!-- Inizio seconda parte di main -->
          <section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Itaque corrupti ut vitae voluptatum dignissimos officiis ipsa omnis dolor rerum dolore, 
+                perferendis ratione delectus excepturi pariatur architecto aspernatur aperiam at nihil. 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repellendus ad, 
+                temporibus facilis quas <span class="bg-yellow">cumque earum modi vitae</span> consectetur nisi voluptatum excepturi 
+                ex deserunt animi perferendis ut amet at optio.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Consequatur sit ex placeat esse ut, possimus aliquid ducimus reprehenderit eum, 
+                quibusdam eligendi fugit rerum quisquam. Accusantium explicabo iusto unde omnis ipsa?
+            </p>
 
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Corporis illum maiores facere odio architecto tempore totam dolorum labore 
+                    incidunt iusto illo, tenetur quas consequuntur debitis ducimus perferendis 
+                    pariatur dolores voluptate.
+                </li>
+                <li>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Expedita deserunt iure ducimus iste illum molestiae quibusdam est saepe molestias 
+                    accusantium sunt, dignissimos vitae temporibus adipisci officiis veniam ipsa 
+                    magnam dolorum!
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    At consectetur velit deleniti corrupti reprehenderit laboriosam ipsa iste hic 
+                    eos atque nobis nam molestias, ad, iusto dolore totam debitis minima consequatur?
+                </li>
+            </ul>
+
+            <table>
+                <tr class="bg-light-blue white-writing">
+                    <th>
+                        <p>Lorem ipsum dolor</p>
+                    </th>
+                    <th>
+                        <p>Lorem ipsum dolor</p>
+                    </th>
+                    <th class="table-width-50">
+                        <p>Lorem ipsum dolor</p>
+                    </th>
+                </tr>
+                <tr class="bg-very-light-blue">
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Tenetur doloremque dolorem odit dolorum possimus voluptatum soluta omnis optio 
+                        similique quos temporibus tempora ratione, deleniti natus iusto voluptas? 
+                        Similique, voluptate voluptas?</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cumque accusantium, magnam esse pariatur sequi, nostrum, quos aut tempora 
+                        id repellat error explicabo cupiditate nulla laboriosam praesentium. 
+                        Ullam provident sunt voluptate?</p>
+                    </td>
+                </tr>
+                <tr class="bg-very-light-blue">
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem ipsum dolor</p>
+                    </td>
+                    <td>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Consequuntur fugiat ducimus quam, provident tempora debitis consequatur 
+                            sunt amet officiis voluptatibus libero quos deserunt corrupti facere neque 
+                            quisquam? Nesciunt, perferendis vitae!</p>
+                    </td>
+                </tr>
+            </table>
+
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Vitae facilis perspiciatis mollitia facere, itaque veritatis. 
+                Dicta quae nemo ab? Adipisci aliquam eveniet, odit perferendis corrupti illum ex impedit 
+                praesentium maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus 
+                magni illo necessitatibus facere <span class="bg-yellow">dicta atque a reiciendis! Nisi deleniti molestiae, quas 
+                eaque molestias</span> excepturi eligendi nulla quaerat repudiandae corrupti quia. Lorem ipsum 
+                dolor sit amet consectetur adipisicing elit. Quibusdam optio odit beatae illo natus, 
+                ipsam quo distinctio facere nobis omnis obcaecati, iste doloribus vero voluptate, iusto 
+                incidunt enim nihil accusantium!
+            </p>
          </section>
         <!-- Fine seconda parte di main -->
     </main>
