--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
+
 <body>
     <!-- Inizio header -->
     <header class="bg-blue header-style">
         <section>
-            <img  class="header-image" src="./img/logo.svg" alt="Logo Booleaner" />
+            <img class="header-image" src="./img/logo.svg" alt="Logo Booleaner" />
         </section>
     </header>
     <!-- Fine header -->
@@ -18,14 +20,14 @@
     <!-- Inizio main -->
     <main>
         <!-- Inizio hero section -->
-         <section>
-            <h1>Internet deve essere al servizio 
-                del "bene pubblico": il manifesto di 
+        <section>
+            <h1>Internet deve essere al servizio
+                del "bene pubblico": il manifesto di
                 Tim Berners-Lee
             </h1>
             <p><span class="text-gray">
-                Scritto da</span>
-                <span class="text-aqua"> 
+                    Scritto da</span>
+                <span class="text-aqua">
                     The Booleaner</span>
             </p>
             <p class="text-small text-gray">
@@ -37,7 +39,7 @@
                 <img src="./img/tim-2.jpg" alt="Tim Berners-Lee">
                 <figcaption>
                     <p class="text-small">
-                        1st Photo: John S. and L. Knight Foundation, 
+                        1st Photo: John S. and L. Knight Foundation,
                         by Scott Henrichsen</br>
                         2nd Photo: Wikimedia, by Paul Clarke
                     </p>
@@ -45,53 +47,56 @@
             </figure>
         </section>
         <!-- Fine hero section -->
-        
+
         <!-- Inizio seconda parte di main -->
-         <section>
+        <section>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Itaque corrupti ut vitae voluptatum dignissimos officiis ipsa omnis dolor rerum dolore, 
-                perferendis ratione delectus excepturi pariatur architecto aspernatur aperiam at nihil. 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repellendus ad, 
-                temporibus facilis quas <span class="bg-yellow">cumque earum modi vitae</span> consectetur nisi voluptatum excepturi 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Itaque corrupti ut vitae voluptatum dignissimos officiis ipsa omnis dolor rerum dolore,
+                perferendis ratione delectus excepturi pariatur architecto aspernatur aperiam at nihil.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repellendus ad,
+                temporibus facilis quas <span class="bg-yellow">cumque earum modi vitae</span> consectetur nisi
+                voluptatum excepturi
                 ex deserunt animi perferendis ut amet at optio.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Consequatur sit ex placeat esse ut, possimus aliquid ducimus reprehenderit eum, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consequatur sit ex placeat esse ut, possimus aliquid ducimus reprehenderit eum,
                 quibusdam eligendi fugit rerum quisquam. Accusantium explicabo iusto unde omnis ipsa?
             </p>
 
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Corporis illum maiores facere odio architecto tempore totam dolorum labore 
-                    incidunt iusto illo, tenetur quas consequuntur debitis ducimus perferendis 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Corporis illum maiores facere odio architecto tempore totam dolorum labore
+                    incidunt iusto illo, tenetur quas consequuntur debitis ducimus perferendis
                     pariatur dolores voluptate.
                 </li>
                 <li>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Expedita deserunt iure ducimus iste illum molestiae quibusdam est saepe molestias 
-                    accusantium sunt, dignissimos vitae temporibus adipisci officiis veniam ipsa 
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Expedita deserunt iure ducimus iste illum molestiae quibusdam est saepe molestias
+                    accusantium sunt, dignissimos vitae temporibus adipisci officiis veniam ipsa
                     magnam dolorum!
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    At consectetur velit deleniti corrupti reprehenderit laboriosam ipsa iste hic 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    At consectetur velit deleniti corrupti reprehenderit laboriosam ipsa iste hic
                     eos atque nobis nam molestias, ad, iusto dolore totam debitis minima consequatur?
                 </li>
             </ul>
 
             <table>
-                <tr class="bg-light-blue white-writing">
-                    <th>
-                        <p>Lorem ipsum dolor</p>
-                    </th>
-                    <th>
-                        <p>Lorem ipsum dolor</p>
-                    </th>
-                    <th class="table-width-50">
-                        <p>Lorem ipsum dolor</p>
-                    </th>
-                </tr>
+                <thead>
+                    <tr class="bg-light-blue text-white">
+                        <th>
+                            <p>Lorem ipsum dolor</p>
+                        </th>
+                        <th>
+                            <p>Lorem ipsum dolor</p>
+                        </th>
+                        <th class="table-width-50">
+                            <p>Lorem ipsum dolor</p>
+                        </th>
+                    </tr>
+                </thead>
                 <tr class="bg-very-light-blue">
                     <td>
                         <p>Lorem ipsum dolor</p>
@@ -100,10 +105,10 @@
                         <p>Lorem ipsum dolor</p>
                     </td>
                     <td>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Tenetur doloremque dolorem odit dolorum possimus voluptatum soluta omnis optio 
-                        similique quos temporibus tempora ratione, deleniti natus iusto voluptas? 
-                        Similique, voluptate voluptas?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Tenetur doloremque dolorem odit dolorum possimus voluptatum soluta omnis optio
+                            similique quos temporibus tempora ratione, deleniti natus iusto voluptas?
+                            Similique, voluptate voluptas?</p>
                     </td>
                 </tr>
                 <tr>
@@ -114,10 +119,10 @@
                         <p>Lorem ipsum dolor</p>
                     </td>
                     <td>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Cumque accusantium, magnam esse pariatur sequi, nostrum, quos aut tempora 
-                        id repellat error explicabo cupiditate nulla laboriosam praesentium. 
-                        Ullam provident sunt voluptate?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Cumque accusantium, magnam esse pariatur sequi, nostrum, quos aut tempora
+                            id repellat error explicabo cupiditate nulla laboriosam praesentium.
+                            Ullam provident sunt voluptate?</p>
                     </td>
                 </tr>
                 <tr class="bg-very-light-blue">
@@ -128,26 +133,27 @@
                         <p>Lorem ipsum dolor</p>
                     </td>
                     <td>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                            Consequuntur fugiat ducimus quam, provident tempora debitis consequatur 
-                            sunt amet officiis voluptatibus libero quos deserunt corrupti facere neque 
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur fugiat ducimus quam, provident tempora debitis consequatur
+                            sunt amet officiis voluptatibus libero quos deserunt corrupti facere neque
                             quisquam? Nesciunt, perferendis vitae!</p>
                     </td>
                 </tr>
             </table>
 
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Vitae facilis perspiciatis mollitia facere, itaque veritatis. 
-                Dicta quae nemo ab? Adipisci aliquam eveniet, odit perferendis corrupti illum ex impedit 
-                praesentium maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus 
-                magni illo necessitatibus facere <span class="bg-yellow">dicta atque a reiciendis! Nisi deleniti molestiae, quas 
-                eaque molestias</span> excepturi eligendi nulla quaerat repudiandae corrupti quia. Lorem ipsum 
-                dolor sit amet consectetur adipisicing elit. Quibusdam optio odit beatae illo natus, 
-                ipsam quo distinctio facere nobis omnis obcaecati, iste doloribus vero voluptate, iusto 
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Vitae facilis perspiciatis mollitia facere, itaque veritatis.
+                Dicta quae nemo ab? Adipisci aliquam eveniet, odit perferendis corrupti illum ex impedit
+                praesentium maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+                magni illo necessitatibus facere <span class="bg-yellow">dicta atque a reiciendis! Nisi deleniti
+                    molestiae, quas
+                    eaque molestias</span> excepturi eligendi nulla quaerat repudiandae corrupti quia. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Quibusdam optio odit beatae illo natus,
+                ipsam quo distinctio facere nobis omnis obcaecati, iste doloribus vero voluptate, iusto
                 incidunt enim nihil accusantium!
             </p>
-         </section>
+        </section>
         <!-- Fine seconda parte di main -->
     </main>
     <!-- Fine main -->
@@ -155,9 +161,22 @@
     <!-- Inizio footer -->
     <footer>
         <section>
-
+            <p class="text-gray"><strong>
+                    Potrebbero interessarti
+                </strong></p>
+            <p class="text-white bg-monitor">
+                <strong>
+                    Lorem ipsum dolor
+                </strong>
+            </p>
+            <p class="text-white bg-graph">
+                <strong>
+                    Lorem ipsum dolor
+                </strong>
+            </p>
         </section>
     </footer>
     <!-- Fine footer -->
 </body>
+
 </html>
